--- a/Server/backend/templates/index.html
+++ b/Server/backend/templates/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>COMP 4350 EC2 Server</title>
-	<link rel="stylesheet" href="/css/style.css">
-	<link rel="stylesheet" href="/css/smoothness/jquery-ui-1.10.4.custom.css">
-	<script src="/jquery/jquery-1.10.2.js"></script>
-	<script src="/jquery/jquery-ui-1.10.4.custom.js"></script>
+	<link rel="stylesheet" href="/static/css/style.css">
+	<link rel="stylesheet" href="/static/css/smoothness/jquery-ui-1.10.4.custom.css">
+	<script src="static/jquery/jquery-1.10.2.js"></script>
+	<script src="static/jquery/jquery-ui-1.10.4.custom.js"></script>
 	
 	<script>
 		$(function() { $("#tabs").tabs(); });
@@ -34,8 +34,8 @@
 		<div id="tabs-2">
 			Item Information <br>
 			
-			<div>
-			<?php
+			
+			<!--
 				$conn = mysqli_connect("localhost", "COMP4350_admin", "admin", "COMP4350_GRP5");
 				if (mysqli_connect_errno())
 					print 'Failed to connect to local DB \"COMP4350_admin\".';
@@ -62,8 +62,7 @@
 				} 
 				echo "</p>";
 				mysqli_close($conn);
-			 ?>
-			</div>
+			-->
 			
 		</div>
 		<div id="tabs-3" class="tab-content">
