--- a/Server/backend/templates/index.html
+++ b/Server/backend/templates/index.html
@@ -35,7 +35,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a id="Home" href="#"">Home</a></li>
+            <li class="active"><a id="Home" href="#">Home</a></li>
             <li><a id="Leaderboard" href="#Leaderboard">Leaderboard</a></li>
             <li><a id="Items" href="#Items">Items</a></li>
             <li><a id="Marketplace" href="#Marketplace">Marketplace</a></li>
@@ -44,9 +44,10 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account <b class="caret"></b></a>
               <ul class="dropdown-menu">
+							
+                <li><a id="Characters" href="#Characters">Characters</a></li>
                 <li class="divider"></li>
-								
-                <li><a href="#">Log out</a></li>
+                <li><a id="Logout" href="#Logout">Log out</a></li>
 								
               </ul>
             </li>
@@ -99,8 +100,27 @@
             $('#contents').html("Item Information");
         });
         $('#Marketplace').on('click', function() {
-            $('#contents').html("Marketplace - Trade/Craft/Buy Items ");
+            $('#contents').html("Marketplace - Trade/Craft/Buy Items");
         });
+        $('#Logout').on('click', function() {
+            $('#contents').html("Goodbye");
+        });			
+        $('#Characters').on('click', function() {
+				
+						data = {};
+            $.ajax({
+                type: "POST",
+                url: "/character/getAll",
+                data: JSON.stringify(data),
+                success: function(data, _1, _2) {
+								
+									$('#contents').html(JSON.stringify(data))
+								
+                },
+                contentType: 'application/json',
+                dataType: "json"
+            });
+        });				
     });
 </script>
   </body>
