--- a/Server/backend/templates/index.html
+++ b/Server/backend/templates/index.html
@@ -113,8 +113,17 @@
                 url: "/character/getAll",
                 data: JSON.stringify(data),
                 success: function(data, _1, _2) {
-								
-									$('#contents').html(JSON.stringify(data))
+				
+									var printHTML = "<h1>Your Characters:</h1> <br><br>"
+									printHTML += "<ol>";
+									for (var i=0; i < data['characters'].length; i++) {
+										var charname = data['characters'][i][2];
+										printHTML += "<li>" + charname + "</li>";
+									}
+									printHTML += "</ol>";
+									$('#contents').html(printHTML);
+
+									
 								
                 },
                 contentType: 'application/json',
