--- a/Server/backend/templates/index.html
+++ b/Server/backend/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <!-- <link rel="shortcut icon" href="../../assets/ico/favicon.ico"> -->
 
-    <title>Theme Template for Bootstrap</title>
+    <title>Explosions! the web page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -41,16 +41,10 @@
             <li><a id="Marketplace" href="#Marketplace">Marketplace</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-							
-                <li><a id="Characters" href="#Characters">Characters</a></li>
-                <li class="divider"></li>
-                <li><a id="Logout" href="#Logout">Log out</a></li>
-								
-              </ul>
-            </li>
+            <!--<li class="dropdown">
+              <a href="#Account" class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a> -->
+              <li><a id="Account" href="#Account">Login</a></li>
+            <!--</li>-->
             <li><form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
                   <input type="text" class="form-control" placeholder="Search">
@@ -73,6 +67,7 @@
 
     <script src="static/jquery/jquery-1.10.2.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/js/util.js"></script>
     <script>
     /*$(function(){
         alert("Test");
@@ -104,32 +99,47 @@
         });
         $('#Logout').on('click', function() {
             $('#contents').html("Goodbye");
-        });			
+        });
+
+        request("/player/current", {}, function(data, _1, _2) {
+            if(data.result !== null) {
+                var dropdown = '<li class="dropdown">';
+                dropdown += '<a href="#Account" class="dropdown-toggle" data-toggle="dropdown"> ';
+                dropdown += data.result;
+                dropdown += ' <b class="caret"></b></a> ';
+                dropdown += '<ul class="dropdown-menu"> ';
+                dropdown += '<li><a id="Characters" href="#Characters">Characters</a></li> ';
+                dropdown += '<li class="divider"></li> ';
+                dropdown += '<li><a id="Logout" href="#Logout">Log out</a></li> ';
+                dropdown += '</ul> ';
+                dropdown += '</li> ';
+
+                var $dropdown = $(dropdown);
+
+                $("#Account").replaceWith($dropdown);
+            }
+        });
+    
         $('#Characters').on('click', function() {
-				
-						data = {};
+            data = {};
             $.ajax({
                 type: "POST",
                 url: "/character/getAll",
                 data: JSON.stringify(data),
                 success: function(data, _1, _2) {
-				
-									var printHTML = "<h1>Your Characters:</h1> <br><br>"
-									printHTML += "<ol>";
-									for (var i=0; i < data['characters'].length; i++) {
-										var charname = data['characters'][i][2];
-										printHTML += "<li>" + charname + "</li>";
-									}
-									printHTML += "</ol>";
-									$('#contents').html(printHTML);
-
-									
-								
+                    var printHTML = "<h1>Your Characters:</h1> <br><br>"
+                    printHTML += "<ol>";
+                    for (var i=0; i < data['characters'].length; i++) {
+                        var charname = data['characters'][i][2];
+                        printHTML += "<li>" + charname + "</li>";
+                    }
+                    printHTML += "</ol>";
+                    $('#contents').html(printHTML);            
                 },
                 contentType: 'application/json',
                 dataType: "json"
             });
-        });				
+        });                
     });
 </script>
   </body>
