Add logout to player menu

--- a/Server/backend/templates/index.html
+++ b/Server/backend/templates/index.html
@@ -98,7 +98,9 @@
             $('#contents').html("Marketplace - Trade/Craft/Buy Items");
         });
 
-        
+        $("#Account").on('click', function() {
+            window.location.replace("/login");
+        }
 
         request("/player/current", {}, function(data, _1, _2) {
             if(data.result !== null) {
