--- a/Server/backend/templates/signup.html
+++ b/Server/backend/templates/signup.html
@@ -30,6 +30,7 @@
 
     <script src="/static/jquery/jquery-1.10.2.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/js/util.js"></script>
 
     <script>
         $("#signin-form").submit(function(event) {
@@ -42,19 +43,13 @@
                 data[obj.name] = obj.value;
             }
 
-            $.ajax({
-                type: "POST",
-                url: "/newAccount",
-                data: JSON.stringify(data),
-                success: function(data, _1, _2) {
-                    if(data.result) {
-                        window.location.replace("/");
-                    } else {
-                        window.location.replace("/signupFailed");
-                    }
-                },
-                contentType: 'application/json',
-                dataType: "json"
+            request("/newAccount", data), function(data, _1, _2) {
+                if(data.result) {
+                    window.location.replace("/");
+                } else {
+                    // TODO: write a nice "sign up failed" website
+                    window.location.replace("/signupFailed");
+                }
             });
         });
     </script>
