--- a/Server/backend/templates/characterCreate.html
+++ b/Server/backend/templates/characterCreate.html
@@ -25,7 +25,7 @@
 
     <script src="/static/jquery/jquery-1.10.2.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="static/js/util.js"></script>
+    <script src="/static/js/util.js"></script>
 
     <script>
         $("#char-form").submit(function(event) {
