--- a/Server/backend/templates/login.html
+++ b/Server/backend/templates/login.html
@@ -29,9 +29,9 @@
 
     </div>
 
-    <script src="static/jquery/jquery-1.10.2.js"></script>
-    <script src="static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="static/js/util.js"></script>
+    <script src="/static/jquery/jquery-1.10.2.js"></script>
+    <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/static/js/util.js"></script>
 
     <script>
         $("#login-form").submit(function(event) {
