--- a/Server/backend/templates/index.html
+++ b/Server/backend/templates/index.html
@@ -123,11 +123,6 @@
                 });
 
 								
-								var printHTML = "<h1>Your Characters:</h1> <br>"
-								var characters = new Array();
-								var inventories = new Array();
-								
-								var ajaxRequests = new Array();
 								
 								/*** This bit gets tricky. We need to make an AJAX request for a Player's 
 									characters, and then use the result of that AJAX request to make several 
@@ -135,9 +130,12 @@
 								
                 $('#Characters').on('click', function() 
 								{		
-									
 									/** Initial AJAX Request for Characters **/
-									
+										var printHTML = "";
+										var characters = new Array();
+										var inventories = new Array();										
+										var ajaxRequests = new Array();
+										
                     request("/character/getAll", {}, function(data, _1, _2) 
 										{
                         for (var i=0; i < data['characters'].length; i++) 
@@ -152,7 +150,7 @@
 									/** Once Initial AJAX Has Completed **/
 												
                     }).done(function () 
-										{																			
+										{										
 												for (var i=0; i < characters.length; i++)
 												{
 													
@@ -173,7 +171,7 @@
 																inventories.push(inventory);
 														}));
 													
-												}
+												} 
 												
 												/** Because we stored the AJAX requests in an array, we can wait
 												  for all of them to finish and then print the HTML knowing we've
@@ -181,6 +179,7 @@
 												
 												$.when.apply($, ajaxRequests).done(function ()
 												{
+														printHTML = "<h1>Your Characters:</h1> <br>";
 														printHTML += "<ul>";
 														for (var i=0; i < characters.length; i++)
 														{ 
