Fixed Syntax error in shop.html

--- a/Server/backend/templates/shop.html
+++ b/Server/backend/templates/shop.html
@@ -49,7 +49,7 @@
     <script>
         $("#purchasables" ).on('click', '.purchasebtn', function(event) {
             event.preventDefault();
-            var objs = $(this).serializeArray());
+            var objs = $(this).serializeArray();
 
             var data = {};
             for(var i = 0; i < objs.length; i++) {
