Implemented AJAX Navigation
+ Re-added reference to JQueryUI
- Commented out scripts for each individual tab

--- a/Server/backend/templates/index.html
+++ b/Server/backend/templates/index.html
@@ -14,43 +14,47 @@
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap theme -->
     <link href="/static/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
-
+    
   </head>
 
   <body role="document">
-
-    <nav class="navbar navbar-inverse" role="navigation">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Explosions!</a>
+	
+    <div id="tabs">
+        <nav class="navbar navbar-inverse" role="navigation">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Explosions!</a>
+            </div>
+    
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li class="active"><a id="Home" href="#home">Home</a></li>
+                <li><a id="Leaderboard" href="leaderboard">Leaderboard</a></li>
+                <li><a id="Items" href="items">Items</a></li>
+                <li><a id="Marketplace" href="marketplace">Marketplace</a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                <!--<li class="dropdown">
+                  <a href="#Account" class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a> -->
+                  <li><a id="Account" href="#Account">Login</a></li>
+                <!--</li>-->
+              </ul>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
+    
+        <div id="home">
+        "Home page. News?"
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a id="Home" href="#">Home</a></li>
-            <li><a id="Leaderboard" href="#Leaderboard">Leaderboard</a></li>
-            <li><a id="Items" href="#Items">Items</a></li>
-            <li><a id="Marketplace" href="#Marketplace">Marketplace</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <!--<li class="dropdown">
-              <a href="#Account" class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a> -->
-              <li><a id="Account" href="#Account">Login</a></li>
-            <!--</li>-->
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-
-    <div id="contents"></div>
+    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -62,6 +66,23 @@
     <script src="static/jquery/jquery-1.10.2.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <script src="static/js/util.js"></script>
+    
+    <script src="static/jquery/jquery-ui-1.10.4.custom.js"></script>
+    <script>
+    $(function() {
+		var $tabsUI = $("#tabs");
+    	$tabsUI.tabs({
+			//TODO: Get these effects working
+			fxFade: true, 
+			fxSpeed: 'slow',
+			beforeLoad: function( event, ui ) {
+				ui.jqXHR.error(function() {
+					ui.panel.html("Couldn't load this tab." );
+				});
+			}
+		});
+	});
+	</script>
 
     <script>
     /*$(function(){
@@ -74,6 +95,7 @@
 
     $(function() {
         // TODO: switch all this to ajax
+		/*
         var homehtml = "Home page. News?";
 
         $('#contents').ready(function() {
@@ -91,7 +113,7 @@
         });
         $('#Marketplace').on('click', function() {
             $('#contents').html("Marketplace - Trade/Craft/Buy Items");
-        });
+        });*/
 
         $("#Account").on('click', function() {
             window.location.replace("/login");
