--- a/Server/backend/templates/index.html
+++ b/Server/backend/templates/index.html
@@ -36,7 +36,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li class="active"><a id="Home" href="#home">Home</a></li>
+                <li class="active"><a id="Home" href="#contents">Home</a></li>
                 <li><a id="Leaderboard" href="leaderboard">Leaderboard</a></li>
                 <li><a id="Items" href="items">Items</a></li>
                 <li><a id="Marketplace" href="marketplace">Marketplace</a></li>
@@ -44,15 +44,17 @@
               <ul class="nav navbar-nav navbar-right">
                 <!--<li class="dropdown">
                   <a href="#Account" class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a> -->
-                  <li><a id="Account" href="#Account">Login</a></li>
+                  <li><a id="Account" href="login">Login</a></li>
                 <!--</li>-->
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
         </nav>
     
-        <div id="home">
+        <div id="contents">
         "Home page. News?"
+        </div>
+        <div id="YourCharacters">
         </div>
     </div>
 
@@ -68,55 +70,11 @@
     <script src="static/js/util.js"></script>
     
     <script src="static/jquery/jquery-ui-1.10.4.custom.js"></script>
+    <script src="static/js/tabs.js"></script>
     <script>
     $(function() {
-		var $tabsUI = $("#tabs");
-    	$tabsUI.tabs({
-			//TODO: Get these effects working
-			fxFade: true, 
-			fxSpeed: 'slow',
-			beforeActivate: function (event, ui) {
-				//TODO: This is normally done automatically, not sure why it isn't
-				ui.oldTab.attr('class', '');
-				ui.newTab.attr('class', 'active');
-				var id = $(ui.newTab.prevObject).prop('id');
-				if(id != "Home") {
-					window.location.hash = id;
-				}
-				else {
-					window.location.hash = '';
-				}
-			},
-			beforeLoad: function( event, ui ) {
-				ui.jqXHR.error(function() {
-					ui.panel.html("Couldn't load this tab." );
-				});
-			}
-		});
-		// Switch to correct tab when URL changes (back/forward browser buttons)
-		$(window).bind('hashchange', function() {
-			if (location.hash !== '') {
-				var id = location.hash.substring(1); //Get rid of #
-				var tabNum = $('a[id=' + id + ']').parent().index();
-				$tabsUI.tabs('option', 'active', tabNum);
-			} else {
-				$tabsUI.tabs('option', 'active', 0);
-			}
-		});
-	});
-	</script>
-
-    <script>
-    /*$(function(){
-        alert("Test");
-        $('#Leaderboard').load('hello.html', function() {
-            alert("Leaderboard");
-            $('.nav a:contains("Home")').parent().addClass('active');
-        })
-    });*/
-
-    $(function() {
-        // TODO: switch all this to ajax
+		createTabs("#tabs", "Home");
+        // TODO: Remove these handlers
 		/*
         var homehtml = "Home page. News?";
 
@@ -135,11 +93,12 @@
         });
         $('#Marketplace').on('click', function() {
             $('#contents').html("Marketplace - Trade/Craft/Buy Items");
-        });*/
-
+        });
+		//We don't want to do this, this makes it so the user cannot use the back button to navigate back to the website
+		//Also if we want a cool login, we could make it a modal dialog
         $("#Account").on('click', function() {
             window.location.replace("/login");
-        });
+        });*/
 
         request("/player/current", {}, function(data, _1, _2) {
             if(data.result !== null) {
@@ -148,9 +107,9 @@
                 dropdown += data.result;
                 dropdown += ' <b class="caret"></b></a> ';
                 dropdown += '<ul class="dropdown-menu"> ';
-                dropdown += '<li><a id="Characters" href="#Characters">Characters</a></li> ';
+                dropdown += '<li><a id="Characters" href="#YourCharacters">Characters</a></li> ';
                 dropdown += '<li class="divider"></li> ';
-                dropdown += '<li><a id="Logout" href="#Logout">Log out</a></li> ';
+                dropdown += '<li><a id="Logout" href="#">Log out</a></li> ';
                 dropdown += '</ul> ';
                 dropdown += '</li> ';
 
@@ -234,7 +193,7 @@
 																}
 														}
 														printHTML += "</ul>";
-														$('#contents').html(printHTML);	
+														$('#YourCharacters').html(printHTML);	
 												});
 										});
 											
