--- a/Server/backend/templates/index.html
+++ b/Server/backend/templates/index.html
@@ -40,6 +40,7 @@
                 <li><a id="Leaderboard" href="leaderboard">Leaderboard</a></li>
                 <li><a id="Items" href="items">Items</a></li>
                 <li><a id="Marketplace" href="marketplace">Marketplace</a></li>
+				<li><a id="Missions" href="missions">Missions</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <!--<li class="dropdown">
