--- a/Server/backend/templates/missions.html
+++ b/Server/backend/templates/missions.html
@@ -16,8 +16,8 @@
       <h1 class="text-center">Missions</a></h6>
       <table class="table table-bordered" id = "missions" cellpadding="10">
       <tr name="data" >
-        <th>Name</th>
-        <th>Description</th>
+        <th>Mission ID</th>
+        <th>Mission Type</th>
         <th>Reward</th>
       </table>
       </form>
@@ -26,5 +26,35 @@
 
     <script src="static/jquery/jquery-1.10.2.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
+	
+	<script>
+          $function populateTable()
+          {
+            request("/mission/getAll", {}, function(data, _1, _2)
+            {
+              var missions = new Array();
+              for (var i in data.rows) {
+                  var mission = new Object();
+                  mission.ID =  data['missions'][i][0];
+                  mission.Type = data['missions'][i][1];
+
+                  missions.push(mission);
+              }
+            }
+          }).done(function()
+          {
+              var row;
+              for (var i = 0; i < items.length; i++)
+              {
+                  row += '<tr id="' + i + '">';
+                  row += '<td> Mission ' + missions[i].ID + '</td>';
+                  row += '<td>' + missions[i].Type + '</td>';
+				  row += '<td>$100</td>';
+                  row += '</tr>';
+              }
+              $(row).appendTo("#missions");
+            });
+        });
+    </script>
   </body>
 </html>
