--- a/Server/backend/templates/index.html
+++ b/Server/backend/templates/index.html
@@ -72,6 +72,7 @@
     
     <script src="static/jquery/jquery-ui-1.10.4.custom.js"></script>
     <script src="static/js/tabs.js"></script>
+	<script src="static/js/tables.js"></script>
     <script>
     $(function() {
 		createTabs("#tabs", "Home");
